# help_me2.0

DirectX12Lab-master/: .gitignore  CMakeLists.txt  DirectX12CustomLib.sln  DirectX12CustomLib.vcxproj  upload_to_github.bat
DirectX12Lab-master/content/shaders/: phong.hlsl
DirectX12Lab-master/src/app/: AppBase.cpp  AppBase.h  CubeApp.cpp  CubeApp.h
DirectX12Lab-master/src/core/: FrameTimer.cpp  FrameTimer.h
DirectX12Lab-master/src/graphics/: Dx12Utils.cpp  Dx12Utils.h  GpuUploadBuffer.h
DirectX12Lab-master/src/math/: MathUtils.cpp  MathUtils.h  MeshGenerator.cpp  MeshGenerator.h
DirectX12Lab-master/src/resources/: ObjLoader.cpp  ObjLoader.h  TextureLoaderDDS.cpp  TextureLoaderDDS.h
DirectX12Lab-master/src/scene/: CameraComponent.cpp  CameraComponent.h
